--- a/posts/2009-06-08-hashtag.markdown
+++ b/posts/2009-06-08-hashtag.markdown
@@ -13,5 +13,27 @@ date: 2009-06-08 06:24:49.000000000 +03:00
 <p>You can download it from here: <a href="http://oprod.net/index.php/downloads/category/7-greasemonkey?download=14%3Atwitter-hastag-auto-link" target="_blank">http://oprod.net/index.php/downloads/category/7-greasemonkey?download=14%3Atwitter-hastag-auto-link</a></p>
 <p> </p>
 <p>And here's the sourcecode:
-<script src="http://snipt.net/embed/6ed4a383aabf69d5672f3cab2d253fa3" type="text/javascript"></script>
+// ==UserScript==
+// @name           Twitter Hashtag Auto-Link
+// @namespace      http://oprod.net
+// @description    Auto-Links Twitter Hashtags to twitter search
+// @include        http://twitter.com/*
+// @include        https://twitter.com/*
+// ==/UserScript==
+
+var entries, entry;
+
+entries = document.evaluate(
+    "//*[@class='entry-content']",
+    document,
+    null,
+    XPathResult.UNORDERED_NODE_SNAPSHOT_TYPE,
+    null);
+
+for(var i = 0; i < entries.snapshotLength; i++) {
+    entry = entries.snapshotItem(i);
+    entry.innerHTML = entry.innerHTML.replace(/#([^ ]+)/g, '<a href="http://twitter.com/#search?q=%23$1" 
+title="$1"  target="_blank">#$1</a>');
+}
+
 </p>
