--- a/posts/2009-12-15-test.markdown
+++ b/posts/2009-12-15-test.markdown
@@ -12,5 +12,5 @@ date: 2009-12-15 09:29:07.000000000 +02:00
 <p>Asa ca am pus si pe <a href="http://otzy.tumblr.com/" target="_blank">http://otzy.tumblr.com</a> putina zapada.</p>
 <p>Am folosit scriptul snow.js pe care il gasiti aici: <a href="http://www.peters1.dk/webtools/javascript/sne.php?sprog=en" target="_blank">http://www.peters1.dk/webtools/javascript/sne.php?sprog=en</a></p>
 <p>Sau puteti doar sa adaugati codul asta imediat dupa tagul <strong>&lt;body&gt;</strong></p>
-<p>&lt;script type=”text/javascript” src=”http://oprod.net/scripts/snow.js”&gt;&lt;/script&gt; <strong><br /></strong></p>
+<pre><code><script type="text/javascript" src="http://oprod.net/scripts/snow.js"></script></code></pre>
 </div>
