--- a/posts/2009-11-24-tumblr.markdown
+++ b/posts/2009-11-24-tumblr.markdown
@@ -6,5 +6,6 @@ joomla_id: 76
 joomla_url: !binary |-
   dHVtYmxy
 date: 2009-11-24 19:52:38.000000000 +02:00
+tags: [Tumblr]
 ---
-<p>Today I've created my tumblr account. You can find me at: <a href="http://otzy.tumblr.com/" target="_blank">http://otzy.tumblr.com</a></p>
+<p>Today I've created my Tumblr account. You can find me at: <a href="http://otzy.tumblr.com/" target="_blank">http://otzy.tumblr.com</a></p>
