--- a/posts/2009-04-11-drop.markdown
+++ b/posts/2009-04-11-drop.markdown
@@ -6,5 +6,6 @@ joomla_id: 9
 joomla_url: !binary |-
   ZHJvcA==
 date: 2009-04-11 17:15:11.000000000 +03:00
+tags: [drop.io]
 ---
 <p>You can find also my projects and scripts files on <a href="http://drop.io/oprodfiles">http://drop.io/oprodfiles</a></p>
